<resources>
    <string name="app_name">AndroidSocket</string>
    <string name="btn_state_stopped">Start Polling!</string>
    <string name="btn_state_started">Stop Polling!</string>
    <string name="btn_service_started">Stop Service!</string>
    <string name="btn_service_stopped">Start Service!</string>
    <string name="btn_server_started">Stop Server!</string>
    <string name="btn_server_stopped">Start Server!</string>
    <string name="notification_text_started">Service started</string>
    <string name="notification_clients_connected">Service started</string>
    <string name="state_started">Polling started</string>
    <string name="server_started">Server started</string>
    <string name="server_stopped">Server stopped</string>
    <string name="state_connecting">Service not started</string>
    <string name="active_connections">Active connections:</string>
    <string name="no_connections">No active connections</string>
    <string name="btn_show_connections">Show connections</string>
    <string name="client_address">Client</string>
    <string name="connection_datetime">Connected since</string>
    <string name="average_delay">Ø delay</string>
    <string name="pings">Pings</string>
    <string name="misses">Misses</string>
    <string name="statistics">Pings/Misses %</string>
    <string name="minimum_delay">min. delay</string>
    <string name="maximum_delay">max. delay</string>
    <string name="btn_file">Save</string>
    <string name="bad">bad</string>
    <string name="medium">medium</string>
    <string name="good">good</string>
    <string name="best">best</string>
    <string name="mail_description">sending via email</string>
</resources>
